--- a/mocthaoxua_render/thaomocxua-demo/cart.html
+++ b/mocthaoxua_render/thaomocxua-demo/cart.html
@@ -32,7 +32,7 @@
             s.parentNode.insertBefore(wf, s);
         })(document);
     </script>
-    <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
             display: none;
@@ -55,7 +55,7 @@
     <div id="mySidenav" class="sidenav menu_mobile hidden-md hidden-lg">
         <div class="top_menu_mobile">
             <span class="close_menu"
-                style="background-image: url(../uploads/images/9c868d5b5318ede0c149d18c18f0437e.png) !important;background-size: 35% 124%;">
+                style="background-image: url(./uploads/images/9c868d5b5318ede0c149d18c18f0437e.png) !important;background-size: 35% 124%;">
             </span>
         </div>
         <div class="content_memu_mb">
@@ -64,10 +64,10 @@
                 </ul>
                 <ul class="ct-mobile">
                     <li class="level0 level-top parent level_ico">
-                        <a href="../index.html">Trang chủ</a>
+                        <a href="./index.html">Trang chủ</a>
                     </li>
                     <li class="level0 level-top parent level_ico">
-                        <a href="../tim-kiem.html">Sản phẩm</a>
+                        <a href="./tim-kiem.html">Sản phẩm</a>
                         <i class="ti-plus hide_close"></i>
                         <ul class="level0 sub-menu" style="display:none;">
                             <li class="nav-lis">
@@ -85,7 +85,7 @@
                         </ul>
                     </li>
                     <li class="level0 level-top parent level_ico">
-                        <a href="../bai-viet/tin-tuc-mau-2.html">Tin tức</a>
+                        <a href="./bai-viet/tin-tuc-mau-2.html">Tin tức</a>
                     </li>
                 </ul>
             </div>
@@ -105,7 +105,7 @@
                             <div class="col-lg-3 col-md-3">
                                 <div class="logo logo_centers">
                                     <a href="../index.html" class="logo-wrapper" title="">
-                                        <img src="../uploads/images/9c868d5b5318ede0c149d18c18f0437e.png">
+                                        <img src="./uploads/images/9c868d5b5318ede0c149d18c18f0437e.png">
                                     </a>
                                 </div>
                             </div>
@@ -236,7 +236,7 @@
                                                     <nav class="header-nav pull-left">
                                                         <ul class="item_big">
                                                             <li class="nav-li nav-item ">
-                                                                <a href="../index.html">Trang chủ</a>
+                                                                <a href="./index.html">Trang chủ</a>
                                                             </li>
                                                             <li class="nav-li nav-item level0 ">
                                                                 <a class="a-img" href="../tim-kiem.html">
@@ -264,7 +264,7 @@
                                                                 </ul>
                                                             </li>
                                                             <li class="nav-li nav-item ">
-                                                                <a href="../bai-viet/tin-tuc-mau-2.html">Tin tức</a>
+                                                                <a href="./bai-viet/tin-tuc-mau-2.html">Tin tức</a>
                                                             </li>
                                                         </ul>
                                                     </nav>
@@ -310,24 +310,7 @@
 
     <div class="cart-product">
         <ul class="list-product">
-            <!-- <li class="product-item">
-            <img src="./uploads/files/6686006814ecd2b68ddf51ca57b37848.jpg" alt="">
-            <div class="product-name">Yến hạt chia vị nhạt phù hợp người tiểu đường và muốn giảm cân Thảo Mộc Xưa hũ 70ml
-            </div>
-            <div class="product-price">12312321$</div>
-            <input type="number" class="product-quantity" value="1">
-            <button class="remove-btn">Remove</button>
-
-        </li>
-        <li class="product-item">
-            <img src="./uploads/files/6686006814ecd2b68ddf51ca57b37848.jpg" alt="">
-            <div class="product-name">Yến hạt chia vị nhạt phù hợp người tiểu đường và muốn giảm cân Thảo Mộc Xưa hũ 70ml
-            </div>
-            <div class="product-price">12312321$</div>
-            <input type="number" class="product-quantity" value="1">
-            <button class="remove-btn">Remove</button>
-
-        </li> -->
+        
         </ul>
         <div class="total">
             <h1 class="cart-total">Total</h1>
@@ -346,8 +329,8 @@
                     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                         <div class="widget-ft">
                             <div class="logo_footer" style="margin-top: -10px;">
-                                <a href="../index.html" class="logo-wrapper">
-                                    <img src="../uploads/images/c9afa5083f149a3356f7a53feeb86aa5.png">
+                                <a href="./index.html" class="logo-wrapper">
+                                    <img src="./uploads/images/c9afa5083f149a3356f7a53feeb86aa5.png">
                                 </a>
                             </div>
                         </div>
@@ -365,8 +348,8 @@
                                     </h4>
                                     <div class="collapse time_work" id="1437f79c60b2d46dfd51b80dec97c87a">
                                         <ul class="list-menu">
-                                            <li class="li_menu"><a href="../index.html">Giới thiệu</a></li>
-                                            <li class="li_menu"><a href="../index.html">Liên hệ</a></li>
+                                            <li class="li_menu"><a href="./index.html">Giới thiệu</a></li>
+                                            <li class="li_menu"><a href="./index.html">Liên hệ</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -382,11 +365,11 @@
                                     </h4>
                                     <div class="collapse time_work" id="7c723b0cd2841d7ee14ad0231c683595">
                                         <ul class="list-menu">
-                                            <li class="li_menu"><a href="../index.html">Chính sách mua hàng và thanh
+                                            <li class="li_menu"><a href="./index.html">Chính sách mua hàng và thanh
                                                     toán</a></li>
-                                            <li class="li_menu"><a href="../index.html">Chính sách đổi trả và hoàn
+                                            <li class="li_menu"><a href="./index.html">Chính sách đổi trả và hoàn
                                                     tiền</a></li>
-                                            <li class="li_menu"><a href="../index.html">Chính sách bảo mật thông tin</a>
+                                            <li class="li_menu"><a href="./index.html">Chính sách bảo mật thông tin</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -423,7 +406,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                                 <div class="slogan-2">
-                                    <img src="../assets/images/logo_thaomocxua-04.png" />
+                                    <img src="./assets/images/logo_thaomocxua-04.png" />
                                     <span>Chăm sóc sức khỏe
                                         và sắc đẹp thuần thiên</span>
                                 </div>
